--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,16 @@
 {
-  "paths": {
-    "src": ["./src/*"],
-  }
+  "include": [
+    "src",
+  ],
+  "exclude": [
+    "node_modules"
+  ],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "src": ["./src/"],
+    },
+    "module": "commonjs",
+    "target": "ESNext"
+  },
 }
