--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^2.0.1",
     "esbuild": "^0.15.12",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite": "^3.0.8"
