--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "@replit/extensions",
   "version": "0.5.1",
   "description": "",
-  "main": "build/index.js",
+  "main": "build/index.esm.js",
+	"unpkg": "build/index.iife.js",
   "module": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx esbuild --bundle src/index.js --outfile=build/index.js  --platform=browser --sourcemap --format=iife --global-name=replit && cp build/index.js example/replit.js && cp build/index.js.map example/replit.js.map",
+		"build": "npm run build:iife && npm run build:esm && npm run populate_replitjs",
+    "build:iife": "npx esbuild --bundle src/index.js --outfile=build/index.iife.js  --platform=browser --sourcemap --format=iife --global-name=replit",
+    "build:esm": "npx esbuild --bundle src/index.js --outfile=build/index.esm.js  --platform=browser --sourcemap --format=esm --global-name=replit",
+		"populate_replitjs": "cp build/index.iife.js example/replit.js && cp build/index.iife.js.map example/replit.js.map",
     "lint": "npx prettier --write src/*",
     "dev": "npm run build && npx vite ./example"
   },
