--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@replit/extensions",
-  "version": "0.7.2",
+  "version": "0.7.3",
   "description": "",
   "main": "build/index.esm.js",
   "unpkg": "build/index.iife.js",
   "module": "build/index.esm.js",
+  "types": "build/types/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run build:iife && npm run build:esm && npm run build:types && npm run populate_replitjs",
