--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@replit/extensions",
-  "version": "0.7.3",
+  "version": "0.7.4",
   "description": "",
   "main": "build/index.esm.js",
   "unpkg": "build/index.iife.js",
@@ -14,7 +14,8 @@
     "build:types": "npx tsc -d --emitDeclarationOnly --outDir build/types",
     "populate_replitjs": "cp build/index.iife.js example/replit.js && cp build/index.iife.js.map example/replit.js.map",
     "lint": "npx prettier --write src/*",
-    "dev": "npm run build && npx vite ./example"
+    "dev": "npm run build && npx vite ./example",
+    "prepublishOnly": "npm run build"
   },
   "files": [
     "index.js",
