--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@replit/extensions",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "description": "",
   "main": "build/index.esm.js",
   "unpkg": "build/index.iife.js",
@@ -24,7 +24,7 @@
   ],
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "comlink": "^4.3.1"
   },
