added rui (wip)

--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "@react-aria/focus": "^3.10.1",
     "@react-aria/menu": "^3.7.1",
     "@react-aria/overlays": "^3.12.1",
+    "@react-aria/tooltip": "^3.3.4",
     "@react-aria/utils": "^3.14.2",
     "@react-aria/visually-hidden": "^3.6.1",
     "@vitejs/plugin-react": "^2.0.1",
     "chroma-js": "^2.4.2",
-    "esbuild": "^0.15.12",
+    "esbuild": "^0.15.18",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
