--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "chroma-js": "^2.4.2",
     "esbuild": "^0.15.18",
     "prettier": "^2.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "typedoc": "^0.23.21",
     "typescript": "^4.9.3",
     "vite": "^3.0.8"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
