--- a/example/package.json
+++ b/example/package.json
@@ -9,6 +9,11 @@
   "author": "lunaroyster",
   "license": "MIT",
   "dependencies": {
-    "@replit/extensions": "file:.."
+    "@replit/extensions": "file:..",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "vite": "^3.0.8"
   }
 }
