--- a/package.json
+++ b/package.json
@@ -43,11 +43,8 @@
     "@vitejs/plugin-react": "^2.0.1",
     "esbuild": "^0.15.18",
     "prettier": "^2.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "tsup": "^6.6.3",
     "typedoc": "^0.23.21",
-    "typescript": "^4.9.3",
-    "vite": "^3.0.8"
+    "typescript": "^4.9.3"
   }
 }
