--- a/package.json
+++ b/package.json
@@ -45,6 +45,15 @@
     "prettier": "^2.7.1",
     "tsup": "^6.6.3",
     "typedoc": "^0.23.21",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "react": "^18.2.0"
+  },
+  "peerDependencies": {
+    "react": ">=17.0.0"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    }
   }
 }
