--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "unpkg": "dist/index.global.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && tsup src/index.ts src/react/index.ts  --sourcemap --dts --format esm,cjs,iife",
+    "build": "rm -rf dist && tsup src/index.ts src/react/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
     "lint": "npx prettier --write src/*",
     "dev": "npm run build && npx vite ./example",
     "prepublishOnly": "npm run build",
