--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@replit/extensions",
-  "version": "0.20.0",
+  "version": "0.21.0",
   "description": "",
   "exports": {
     "./package.json": "./package.json",
@@ -25,8 +25,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist && tsup src/index.ts src/react/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
-    "lint": "npx prettier --write src/*",
-    "dev": "npm run build && npx vite ./example",
+    "lint": "npx prettier --write src/* && cd example && npx prettier --write .",
+    "dev": "npm run build && cd ./example && npx vite build && npx vite preview",
     "prepublishOnly": "npm run build",
     "generate:docs": "npx typedoc src/index.ts --json docs/main.json --plugin ./util/signature-plugin"
   },
