--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist && tsup src/index.ts src/react/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
     "lint": "npx prettier --write src/* && cd example && npx prettier --write .",
-    "dev": "npm run build && cd ./example && npx vite build && npx vite preview",
+    "dev": "npm run build && cd ./example && npx vite",
     "prepublishOnly": "npm run build",
     "generate:docs": "npx typedoc src/index.ts --json docs/main.json --plugin ./util/signature-plugin"
   },
