--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lint": "npx prettier --write src/*",
     "dev": "npm run build && npx vite ./example",
     "prepublishOnly": "npm run build",
-    "generate:docs": "npx typedoc src/index.ts --json docs/main.json --plugin ./util/signature-plugin"
+    "generate:docs": "npx typedoc src/index.ts --json docs/main.json --plugin ./util/signature-plugin/index.cjs"
   },
   "files": [
     "dist/*"
