--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@replit/extensions",
-  "version": "0.22.0-test",
+  "version": "0.23.0",
   "description": "",
   "exports": {
     "./package.json": "./package.json",
