added lint:check and type:check

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist && tsup src/index.ts src/react/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
     "lint": "npx prettier --write src/* && cd example && npx prettier --write .",
+    "lint:check": "npx prettier -l src/* && cd example && npx prettier -l .",
+    "type:check": "tsc --noEmit",
     "dev": "npm run build && cd ./example && npx vite",
     "prepublishOnly": "npm run build",
     "generate:docs": "npx typedoc src/index.ts --json docs/main.json --plugin ./util/signature-plugin/index.cjs"
