--- a/.github/workflows/format-check.yaml
+++ b/.github/workflows/format-check.yaml
@@ -1,5 +1,3 @@
-name: Typecheck
-
 on:
   push:
     branches:
@@ -9,7 +7,7 @@ on:
       - main
 
 jobs:
-  typecheck:
+  format:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -17,4 +15,4 @@ jobs:
         with:
           node-version: 14
       - run: npm install
-      - run: npm run type:check
+      - run: npm run lint:check
