--- a/.github/workflows/type-check.yaml
+++ b/.github/workflows/type-check.yaml
@@ -1,5 +1,3 @@
-name: Autoformat
-
 on:
   push:
     branches:
@@ -9,7 +7,7 @@ on:
       - main
 
 jobs:
-  format:
+  typecheck:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -17,10 +15,4 @@ jobs:
         with:
           node-version: 14
       - run: npm install
-      - run: npm run lint
-      - uses: EndBug/add-and-commit@v7
-        with:
-          add: '["src", "example"]'
-          message: "Format code (automated)"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: npm run type:check
