--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: type-check
+name: checks
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  typecheck:
+  typescript:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
