--- a/example/package.json
+++ b/example/package.json
@@ -5,17 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx prettier --write . "
+    "lint": "npx prettier --write . ",
+    "dev": "vite"
   },
   "author": "lunaroyster",
   "license": "MIT",
   "dependencies": {
     "@replit/extensions": "file:..",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite": "^4.2.1"
   },
   "devDependencies": {
-    "vite": "^3.0.8",
     "prettier": "^2.7.1"
   }
 }
