--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist && tsup src/index.ts src/react/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
     "lint": "npx prettier --write src/* && cd example && npx prettier --write .",
-    "dev": "npm run build && cd ./example && npx vite",
+    "dev": "npm run build && cd ./example && vite",
     "prepublishOnly": "npm run build",
     "generate:docs": "npx typedoc src/index.ts --json docs/main.json --plugin ./util/signature-plugin/index.cjs"
   },
@@ -48,7 +48,8 @@
     "react": "^18.2.0",
     "tsup": "^6.6.3",
     "typedoc": "^0.23.21",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "vite": "^4.2.1"
   },
   "peerDependencies": {
     "react": ">=17.0.0"
