--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@codemirror/state": "^6.2.0",
     "@types/react": "^18.0.28",
     "comlink": "^4.3.1"
   },
