--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,10 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
-      "src": ["./src/"],
+      "src": ["./src/"]
     },
     "module": "commonjs",
-    "target": "ESNext"
+    "target": "ESNext",
+    "declaration": true
   },
 }
