--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "./package.json": "./package.json",
     ".": {
       "import": "./dist/index.js",
+      "default": "./dist/index.js",
       "require": "./dist/index.cjs",
       "types": "./dist"
     },
     "./react": {
       "import": "./dist/react/index.js",
+      "default": "./dist/react/index.js",
       "require": "./dist/react/index.cjs",
       "types": "./dist/react"
     }
