--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
   "name": "@replit/extensions",
-  "version": "0.33.0",
+  "version": "0.32.1",
   "description": "",
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "import": "./dist/index.js",
-      "default": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist"
+      "types": "./dist/index.d.ts",
+      "import": {
+        "default": "./dist/index.js"
+      },
+      "default": "./dist/index.cjs"
     },
     "./react": {
-      "import": "./dist/react/index.js",
-      "default": "./dist/react/index.js",
-      "require": "./dist/react/index.cjs",
-      "types": "./dist/react"
+      "types": "./dist/react/index.d.ts",
+      "import": {
+        "types": "./dist/react/index.d.ts",
+        "default": "./dist/react/index.js"
+      },
+      "default": "./dist/react/index.cjs"
     }
   },
   "types": "./dist/index.d.ts",
-  "unpkg": "dist/index.global.js",
   "type": "module",
+  "unpkg": "dist/index.global.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist && tsup src/index.ts src/react/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
