--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,8 @@
   "author": "lunaroyster",
   "license": "MIT",
   "dependencies": {
-    "@replit/extensions": "file:..",
+    "@replit/extensions": "^0.35.2",
+    "@replit/extensions-react": "^0.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite": "^4.2.1"
