--- a/package.json
+++ b/package.json
@@ -11,15 +11,6 @@
       },
       "default": "./dist/index.cjs",
       "require": "./dist/index.js"
-    },
-    "./react": {
-      "types": "./dist/react/index.d.ts",
-      "import": {
-        "types": "./dist/react/index.d.ts",
-        "default": "./dist/react/index.js"
-      },
-      "default": "./dist/react/index.cjs",
-      "require": "./dist/index.js"
     }
   },
   "types": "./dist/index.d.ts",
@@ -27,7 +18,7 @@
   "unpkg": "dist/index.global.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && tsup src/index.ts src/react/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
+    "build": "rm -rf dist && tsup src/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
     "lint": "npx prettier --write src/* && cd example && npx prettier --write .",
     "lint:check": "npx prettier -l src/* && cd example && npx prettier -l .",
     "type:check": "tsc --noEmit",
@@ -35,39 +26,21 @@
     "prepublishOnly": "npm run build",
     "generate:docs": "npx typedoc src/index.ts --json docs/main.json --plugin ./util/signature-plugin/index.cjs"
   },
-  "typesVersions": {
-    "*": {
-      "react": [
-        "dist/react/index.d.ts"
-      ]
-    }
-  },
   "files": [
     "dist/*"
   ],
-  "keywords": ["replit", "extensions", "api-client", "react"],
+  "keywords": ["replit", "extensions", "api-client"],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@codemirror/state": "^6.2.0",
-    "@types/react": "^18.0.28",
     "comlink": "^4.3.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^2.0.1",
     "esbuild": "^0.15.18",
     "prettier": "^2.7.1",
-    "react": "^18.2.0",
     "tsup": "^6.6.3",
     "typedoc": "^0.23.21",
     "typescript": "^4.9.3"
-  },
-  "peerDependencies": {
-    "react": ">=17.0.0"
-  },
-  "peerDependenciesMeta": {
-    "react": {
-      "optional": true
-    }
   }
 }
