--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@replit/extensions",
-  "version": "0.36.0",
+  "version": "1.0.0-beta.0",
   "description": "",
   "exports": {
     "./package.json": "./package.json",
