--- a/modules/extensions-react/package.json
+++ b/modules/extensions-react/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@replit/extensions",
-  "version": "1.1.0",
+  "name": "@replit/extensions-react",
+  "version": "1.1.1",
   "description": "",
   "exports": {
     "./package.json": "./package.json",
@@ -19,28 +19,34 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist && tsup src/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
-    "lint": "npx prettier --write src/* && cd example && npx prettier --write .",
-    "lint:check": "npx prettier -l src/* && cd example && npx prettier -l .",
+    "lint": "npx prettier --write src/*",
+    "lint:check": "npx prettier -l src/*",
     "type:check": "tsc --noEmit",
-    "dev": "npm run build && cd ./example && npm install && npm run dev",
-    "prepublishOnly": "npm run build",
-    "generate:docs": "npx typedoc src/index.ts --json docs/main.json --plugin ./util/signature-plugin/index.cjs"
+    "prepublishOnly": "tsc --noEmit && npm run lint:check && npm run build"
   },
   "files": [
     "dist/*"
   ],
-  "keywords": ["replit", "extensions", "api-client"],
+  "keywords": [
+    "replit",
+    "extensions",
+    "react"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@codemirror/state": "^6.2.0",
-    "comlink": "^4.3.1"
+    "@types/react": "^18.0.28"
   },
   "devDependencies": {
     "esbuild": "^0.15.18",
     "prettier": "^2.7.1",
+    "react": "^18.2.0",
     "tsup": "^6.6.3",
-    "typedoc": "^0.23.21",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "@replit/extensions": "workspace:*"
+  },
+  "peerDependencies": {
+    "@replit/extensions": ">=1.0.0",
+    "react": ">=17.0.0"
   }
 }
