--- a/modules/extensions-react/tsconfig.json
+++ b/modules/extensions-react/tsconfig.json
@@ -1,10 +1,6 @@
 {
-  "include": [
-    "src",
-  ],
-  "exclude": [
-    "node_modules"
-  ],
+  "include": ["src"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
     "strict": true,
     "esModuleInterop": true,
@@ -14,6 +10,7 @@
     },
     "module": "commonjs",
     "target": "ESNext",
-    "declaration": true
-  },
+    "declaration": true,
+    "jsx": "react-jsx"
+  }
 }
