--- a/modules/extensions/package.json
+++ b/modules/extensions/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@replit/extensions-react",
-  "version": "1.1.1",
+  "name": "@replit/extensions",
+  "version": "1.1.0",
   "description": "",
   "exports": {
     "./package.json": "./package.json",
@@ -17,13 +17,12 @@
   "type": "module",
   "unpkg": "dist/index.global.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist && tsup src/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
-    "lint": "npx prettier --write src/*",
-    "lint:check": "npx prettier -l src/*",
+    "lint": "npx prettier --write src/* && cd example && npx prettier --write .",
+    "lint:check": "npx prettier -l src/* && cd example && npx prettier -l .",
     "type:check": "tsc --noEmit",
-    "dev": "npm run build && cd ./example && npx vite",
-    "prepublishOnly": "tsc --noEmit && npm run lint:check && npm run build"
+    "prepublishOnly": "npm run build",
+    "generate:docs": "npx typedoc src/index.ts --json docs/main.json --plugin ./util/signature-plugin/index.cjs"
   },
   "files": [
     "dist/*"
@@ -31,23 +30,19 @@
   "keywords": [
     "replit",
     "extensions",
-    "react"
+    "api-client"
   ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@types/react": "^18.0.28"
+    "@codemirror/state": "^6.2.0",
+    "comlink": "^4.3.1"
   },
   "devDependencies": {
     "esbuild": "^0.15.18",
     "prettier": "^2.7.1",
-    "react": "^18.2.0",
     "tsup": "^6.6.3",
-    "typescript": "^4.9.3",
-    "@replit/extensions": "^1.1.0"
-  },
-  "peerDependencies": {
-    "@replit/extensions": ">=1.0.0",
-    "react": ">=17.0.0"
+    "typedoc": "^0.23.21",
+    "typescript": "^4.9.3"
   }
 }
