--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 18
-      - run: npm install
-      - run: npm run type:check
+      - run: pnpm install
+      - run: pnpm type:check
   format:
     runs-on: ubuntu-latest
     steps:
@@ -25,5 +25,5 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 18
-      - run: npm install
-      - run: npm run lint:check
+      - run: pnpm install
+      - run: pnpm lint:check
