--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+      - uses: pnpm/action-setup@v2
         with:
           node-version: 18
       - run: pnpm install
@@ -23,6 +24,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+      - uses: pnpm/action-setup@v2
         with:
           node-version: 18
       - run: pnpm install
