--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,9 +14,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
-      - uses: pnpm/action-setup@v2
         with:
           node-version: 18
+      - uses: pnpm/action-setup@v2
+        with: 
+          version: 7.29.1
       - run: pnpm install
       - run: pnpm type:check
   format:
@@ -24,8 +26,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
-      - uses: pnpm/action-setup@v2
         with:
           node-version: 18
+      - uses: pnpm/action-setup@v2
+        with: 
+          version: 7.29.1
       - run: pnpm install
       - run: pnpm lint:check
