--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   ],
   "author": "Replit",
   "license": "MIT",
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=7"
+  },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^4.2.1",
