--- a/modules/extensions-react/package.json
+++ b/modules/extensions-react/package.json
@@ -35,15 +35,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@types/react": "^18.0.28"
+    "@types/react": "^18.0.28",
+    "@replit/extensions": "workspace:*"
   },
   "devDependencies": {
     "esbuild": "^0.15.18",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "tsup": "^6.6.3",
-    "typescript": "^4.9.3",
-    "@replit/extensions": "workspace:*"
+    "typescript": "^4.9.3"
   },
   "peerDependencies": {
     "@replit/extensions": ">=1.0.0",
