--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
     "tsup": "^6.6.3",
     "typedoc": "^0.23.21",
     "typescript": "^4.9.3",
-    "vite": "^4.2.1"
-  },
-  "dependencies": {
+    "vite": "^4.2.1",
     "@replit/extensions": "workspace:*"
   }
 }
