--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,7 @@ jobs:
         with: 
           version: 7.29.1
       - run: pnpm install
+      - run: pnpm install @replit/extensions --workspace-root
       - run: pnpm type:check
   format:
     runs-on: ubuntu-latest
@@ -32,5 +33,4 @@ jobs:
         with: 
           version: 7.29.1
       - run: pnpm install
-      - run: pnpm install @replit/extensions
       - run: pnpm lint:check
