time to pass, ci

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,7 @@ jobs:
         with: 
           version: 7.29.1
       - run: pnpm install
+      - run: pnpm build:extensions
       - run: pnpm type:check
   format:
     runs-on: ubuntu-latest
