--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "extensions",
   "description": "Replit Extensions Client Monorepo",
   "scripts": {
-    "dev": "cd modules/example && pnpm dev",
+    "dev": "pnpm build:all && cd modules/example && pnpm dev",
     "lint": "prettier --write \"**/(src|example)/**/*.{js,ts,tsx,jsx}\"",
     "lint:check": "prettier -l \"**/(src|example)/**/*.{js,ts,tsx,jsx}\"",
     "type:check": "cd modules/extensions && tsc --noEmit && cd ../extensions-react && tsc --noEmit",
     "build:extensions": "cd modules/extensions && rm -rf dist && tsup src/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
     "build:react": "cd modules/extensions-react && rm -rf dist && tsup src/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
+    "build:all": "pnpm build:extensions && pnpm build:react",
     "publish:extensions": "pnpm lint:check && pnpm type:check && cd modules/extensions && npm publish",
     "publish:react": "pnpm lint:check && pnpm type:check && cd modules/extensions-react && npm publish"
   },
@@ -21,7 +22,7 @@
   "license": "MIT",
   "engines": {
     "node": ">=18",
-    "pnpm": ">=7"
+    "pnpm": ">=6"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
