--- a/modules/extensions/package.json
+++ b/modules/extensions/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@replit/extensions",
   "version": "1.1.0",
-  "description": "",
+  "description": "The Replit Extensions client is a module that allows you to easily interact with the Workspace.",
   "exports": {
     "./package.json": "./package.json",
     ".": {
