--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "extensions",
-  "description": "Replit Extensions Client Monorepo",
+  "name": "replit-extensions-client",
+  "description": "Replit Extensions Monorepo (All Clients)",
   "scripts": {
     "dev": "pnpm build:all && cd modules/example && pnpm dev",
     "lint": "prettier --write \"**/(src|example)/**/*.{js,ts,tsx,jsx}\"",
@@ -34,7 +34,6 @@
     "tsup": "^6.6.3",
     "typedoc": "^0.23.21",
     "typescript": "^4.9.3",
-    "vite": "^4.2.1",
-    "@replit/extensions": "workspace:*"
+    "vite": "^4.2.1"
   }
 }
