--- a/modules/extensions-react/tsconfig.json
+++ b/modules/extensions-react/tsconfig.json
@@ -2,15 +2,10 @@
   "include": ["src"],
   "exclude": ["node_modules"],
   "compilerOptions": {
-    "strict": true,
-    "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
       "src": ["./src/"]
     },
-    "module": "commonjs",
-    "target": "ESNext",
-    "declaration": true,
-    "jsx": "react-jsx"
-  }
+  },
+  "extends": "../../tsconfig.json"
 }
