--- a/modules/example/package.json
+++ b/modules/example/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@replit/extensions": "workspace:*",
     "@replit/extensions-react": "workspace:*",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
