--- a/modules/extensions-react/tsconfig.json
+++ b/modules/extensions-react/tsconfig.json
@@ -6,7 +6,7 @@
     "paths": {
       "src": ["./src/"]
     },
-    "jsx": "preserve"
+    "jsx": "react-jsx"
   },
   "extends": "../../tsconfig.json"
 }
