--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,8 +16,12 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 18
-      - run: npm install
-      - run: npm run type:check
+      - uses: pnpm/action-setup@v2
+        with: 
+          version: 7.29.1
+      - run: pnpm install
+      - run: pnpm build:extensions
+      - run: pnpm type:check
   format:
     runs-on: ubuntu-latest
     steps:
@@ -25,5 +29,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 18
-      - run: npm install
-      - run: npm run lint:check
+      - uses: pnpm/action-setup@v2
+        with: 
+          version: 7.29.1
+      - run: pnpm install
+      - run: pnpm lint:check
