--- a/package.json
+++ b/package.json
@@ -1,46 +1,41 @@
 {
-  "name": "@replit/extensions",
-  "version": "1.1.0",
-  "description": "",
-  "exports": {
-    "./package.json": "./package.json",
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": {
-        "default": "./dist/index.js"
-      },
-      "default": "./dist/index.cjs",
-      "require": "./dist/index.js"
-    }
-  },
-  "types": "./dist/index.d.ts",
-  "type": "module",
-  "unpkg": "dist/index.global.js",
+  "name": "replit-extensions-client",
+  "description": "Replit Extensions Monorepo (All Clients)",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && tsup src/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
-    "lint": "npx prettier --write src/* && cd example && npx prettier --write .",
-    "lint:check": "npx prettier -l src/* && cd example && npx prettier -l .",
-    "type:check": "tsc --noEmit",
-    "dev": "npm run build && cd ./example && npm install && npm run dev",
-    "prepublishOnly": "npm run build",
-    "generate:docs": "npx typedoc src/index.ts --json docs/main.json --plugin ./util/signature-plugin/index.cjs"
+    "dev": "pnpm build:all && cd modules/example && pnpm dev",
+    "lint": "prettier --write \"**/(src|example)/**/*.{js,ts,tsx,jsx}\"",
+    "lint:check": "prettier -l \"**/(src|example)/**/*.{js,ts,tsx,jsx}\"",
+    "type:check": "cd modules/extensions && tsc --noEmit && cd ../extensions-react && tsc --noEmit",
+    "build:extensions": "cd modules/extensions && rm -rf dist && tsup src/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
+    "build:react": "cd modules/extensions-react && rm -rf dist && tsup src/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
+    "build:all": "pnpm build:extensions && pnpm build:react",
+    "clean:all": "rm -rf modules/extensions/dist && rm -rf modules/extensions-react/dist",
+    "publish:extensions": "pnpm lint:check && pnpm type:check && cd modules/extensions && pnpm publish",
+    "publish:react": "pnpm lint:check && pnpm type:check && cd modules/extensions-react && pnpm publish"
   },
-  "files": [
-    "dist/*"
+  "keywords": [
+    "extensions",
+    "api",
+    "client",
+    "replit"
   ],
-  "keywords": ["replit", "extensions", "api-client"],
-  "author": "",
+  "author": "Replit",
   "license": "MIT",
-  "dependencies": {
-    "@codemirror/state": "^6.2.0",
-    "comlink": "^4.3.1"
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=6"
   },
   "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@vitejs/plugin-react": "^4.0.0",
     "esbuild": "^0.15.18",
     "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tsup": "^6.6.3",
     "typedoc": "^0.23.21",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "vite": "^4.2.1",
+    "@replit/extensions": "workspace:*"
   }
 }
