--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,13 @@
 {
-  "include": [
-    "src",
-  ],
-  "exclude": [
-    "node_modules"
-  ],
   "compilerOptions": {
     "strict": true,
     "esModuleInterop": true,
-    "baseUrl": ".",
-    "paths": {
-      "src": ["./src/"]
-    },
-    "module": "commonjs",
     "target": "ESNext",
-    "declaration": true
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "noUncheckedIndexedAccess": true
   },
 }
