--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "pnpm build:all && cd modules/example && pnpm dev",
     "lint": "turbo run lint",
+    "lint:check": "turbo run lint:check",
     "type:check": "cd modules/extensions && tsc --noEmit && cd ../extensions-react && tsc --noEmit",
     "build:extensions": "cd modules/extensions && rm -rf dist && tsup src/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
     "build:react": "cd modules/extensions-react && rm -rf dist && tsup src/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
