--- a/modules/example/package.json
+++ b/modules/example/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx prettier --write .",
+    "lint:check": "npx prettier -l .",
     "dev": "vite"
   },
   "author": "lunaroyster",
