added clean script

--- a/modules/extensions/package.json
+++ b/modules/extensions/package.json
@@ -24,6 +24,7 @@
     "lint": "npx prettier --write src/*",
     "lint:check": "npx prettier -l src/*",
     "type:check": "tsc --noEmit",
+    "clean": "rm -rf dist",
     "prepublishOnly": "npm run build",
     "generate:docs": "npx typedoc src/index.ts --json docs/main.json --plugin ./util/signature-plugin/index.cjs"
   },
