--- a/modules/extensions-react/package.json
+++ b/modules/extensions-react/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsup src/index.ts  --sourcemap --dts --format esm,cjs,iife --global-name replit",
+    "clean": "rm -rf dist",
     "lint": "npx prettier --write src/*",
     "lint:check": "npx prettier -l src/*",
     "type:check": "tsc --noEmit",
