--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pnpm": ">=6"
   },
   "devDependencies": {
+    "@replit/extensions": "workspace:*",
     "@types/react": "^18.0.28",
     "@vitejs/plugin-react": "^4.0.0",
     "esbuild": "^0.15.18",
@@ -31,9 +32,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tsup": "^6.6.3",
+    "turbo": "^1.9.3",
     "typedoc": "^0.23.21",
     "typescript": "^4.9.3",
-    "vite": "^4.2.1",
-    "@replit/extensions": "workspace:*"
+    "vite": "^4.2.1"
   }
 }
