--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,9 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
-    "build": {},
+    "build": {
+      "dependsOn": ["^build"]
+    },
     "lint": {},
     "clean": {
       "cache": false
