--- a/modules/extensions-react/package.json
+++ b/modules/extensions-react/package.json
@@ -5,17 +5,26 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "types": "./dist/index.d.ts",
+      "types": "./src/index.ts",
       "import": {
-        "default": "./dist/index.js"
-      },
-      "default": "./dist/index.cjs",
-      "require": "./dist/index.js"
+        "default": "./src/index.ts"
+      }
     }
   },
   "types": "./src/index.ts",
   "publishConfig": {
-    "types": "./dist/index.d.ts"
+    "types": "./dist/index.d.ts",
+    "exports": {
+      "./package.json": "./package.json",
+      ".": {
+        "types": "./dist/index.d.ts",
+        "import": {
+          "default": "./dist/index.js"
+        },
+        "default": "./dist/index.cjs",
+        "require": "./dist/index.js"
+      }
+    }
   },
   "type": "module",
   "unpkg": "dist/index.global.js",
