--- a/modules/extensions-react/package.json
+++ b/modules/extensions-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@replit/extensions-react",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "The React Extensions API Client comes with a set of hooks and components that combine to make a blazingly fast and seamless developer experience.",
   "exports": {
     "./package.json": "./package.json",
@@ -34,8 +34,7 @@
     "clean": "rm -rf dist",
     "lint": "npx prettier --write src/*",
     "lint:check": "npx prettier -l src/*",
-    "type:check": "tsc --noEmit",
-    "prepublishOnly": "tsc --noEmit && npm run lint:check && npm run build"
+    "type:check": "tsc --noEmit"
   },
   "files": [
     "dist/*"
