--- a/modules/react-example/package.json
+++ b/modules/react-example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "extension-example",
+  "name": "react-extension-example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
