--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "publish:extensions": "turbo run lint:check type:check build && cd modules/extensions && pnpm publish",
     "publish:react": "turbo run lint:check type:check build && cd modules/extensions-react && pnpm publish",
     "publish:extensions:beta": "turbo run lint:check type:check build && cd modules/extensions && pnpm publish --tag beta",
-    "publish:react:beta": "turbo run lint:check type:check build && cd modules/extensions-react && pnpm publish --tag beta"
+    "publish:react:beta": "turbo run lint:check type:check build && cd modules/extensions-react && pnpm publish --tag beta",
+    "test:extensions": "cd modules/extensions && turbo run build test:build --log-prefix=none",
+    "test:react": "cd modules/extensions-react && turbo run build test:build --log-prefix=none",
+    "test": "pnpm test:extensions && pnpm test:react"
   },
   "keywords": [
     "extensions",
@@ -29,11 +32,15 @@
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
     "@replit/extensions": "workspace:*",
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.3",
     "@types/react": "^18.0.28",
     "@vitejs/plugin-react": "^4.0.0",
     "esbuild": "^0.15.18",
+    "esbuild-jest": "^0.5.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
