whack CI into place

--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,8 @@
     "clean": {
       "cache": false
     },
-    "type:check": {}
+    "type:check": {
+      "dependsOn": ["build"]
+    }
   }
 }
