--- a/modules/extensions/tsconfig.json
+++ b/modules/extensions/tsconfig.json
@@ -5,6 +5,10 @@
     "paths": {
       "src": ["./src/"]
     },
+    "types": [
+      "jest",
+      "node"
+    ]
   },
   "extends": "../../tsconfig.json",
 }
