--- a/turbo.json
+++ b/turbo.json
@@ -7,9 +7,12 @@
     "test:build": {
       "dependsOn": ["build"]
     },
+    "lint": {},
     "clean": {
       "cache": false
     },
+    "lint:check": {},
+    "type:check": {},
     "type:check": {
       "dependsOn": ["build"]
     }
