--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,8 @@
       "cache": false
     },
     "lint:check": {},
-    "type:check": {}
+    "type:check": {
+      "dependsOn": ["build"]
+    }
   }
 }
