--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "description": "Replit Extensions Monorepo (All Clients)",
   "scripts": {
     "dev:docs": "cd docs && pnpm dev",
+    "build:docs": "cd docs && node index.js",
     "dev": "cd modules/dev && pnpm dev",
-    "lint": "turbo run lint",
-    "lint:check": "turbo run lint:check",
-    "type:check": "turbo run type:check",
+    "lint": "turbo run lint && cd docs && pnpm lint",
+    "lint:check": "turbo run lint:check && cd docs && pnpm lint:check",
+    "type:check": "turbo run type:check && cd docs && pnpm type:check",
     "test:build": "turbo run test:build",
     "build": "turbo run build",
     "clean": "turbo run clean",
