--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,9 @@
     "dev": "next-remote-watch docs/*",
     "build": "next build",
     "start": "next start -H 0.0.0.0",
-    "lint": "next lint"
+    "lint": "npx prettier --write **/*.{ts,tsx,js}",
+    "lint:check": "npx prettier -l **/*.{ts,tsx,js}",
+    "type:check": "tsc --noEmit"
   },
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
@@ -14,6 +16,7 @@
     "@next/mdx": "^13.4.7",
     "@replit/extensions": "^1.7.2",
     "@replit/extensions-react": "^0.1.3",
+    "downshift": "^7.6.0",
     "glob": "^10.3.0",
     "next": "12.2.0",
     "next-mdx-remote": "4.2.0",
@@ -21,6 +24,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/mdx": "^2.0.5",
     "@types/node": "18.0.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
