Added dev module

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "replit-extensions-client",
   "description": "Replit Extensions Monorepo (All Clients)",
   "scripts": {
-    "tester": "cd modules/tester && pnpm tester",
+    "tester": "cd modules/tester && pnpm dev",
+    "dev": "cd modules/dev && pnpm dev",
     "lint": "turbo run lint",
     "lint:check": "turbo run lint:check",
     "type:check": "turbo run type:check",
